--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Researchers in moral psychology had long assumed that information related to bad moral character is prioritized in information processing, yet the evidence is scarce. The main challenage lies operationalizing moral character to suit cognitive tasks. Social associative learning task, where participants first learn the associations between social conceptions and neutral stimuli and then perform cognitive tasks (e.g., matching judgment), had been proved to be an effective way to study the information processing of social and affective factors. Here, we examined the information process of moral character using social associataive learning task. Across 9 experiments (N = XXX, trials = XXX), we found a robust but opposite effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, even when identity or moral character information became task-irrelevant, good character still interact with self-referential processing: the good-self combination facilitate the process while the good-other combination slowed down the process. Together, these results suggested a positiviity bias in social associative learning task where good character are prioritized.
+ Researchers in moral psychology had long assumed that information related to bad moral character is prioritized in cognitive processing, yet the evidence is scarce. A main challenage lies operationalizing moral character to suit cognitive tasks. Social associative learning task, where participants first learn the associations between social conceptions and neutral stimuli and then perform cognitive tasks (e.g., matching judgment), had been proved to be an effective way to study the information processing of social and affective factors. Here, we examined the information process of moral character using social associataive learning task. Across 9 experiments (N = 4XX, trials = XXX), we found a robust but opposite effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, even when identity or moral character information became task-irrelevant, good character still interact with self-referential processing: the good-self combination facilitate the process while the good-other combination slowed down the process. Together, these results suggested a positiviity bias in social associative learning task where good character are prioritized.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -91,11 +91,14 @@ moral associative learning as an stronger predictor??
 
 social vision --> moral vision --> two competing explanations (value-based vs. true-self-based) --> true-self is not perspective free but self-centered.
 
-[morality is central to social life, moral character is the central of morality]
-People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge moral character of people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. Also, evidence from studies of person perception and social evaluation revealed that morality is a basic dimension for social evaluation and it is weighed more than traits from other dimensions such as competence and sociability [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020]. The importance of moral character may have been internalized to individuals' self-concept and the positive moral self is the most important aspect of identity [e.g., @strohminger_true_2017], and moral character is a standard we used to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. 
+[Huang & Sherman 2018, attention theory: attend to differentiating information to maximize category learning]
+[Unkelbach et al., 2020, Similarity theory of positivity and negativiity bias, a very comprehensive review of positivity effect and negativity effect in social cognition. Especially interesting is that, with extensive studies on the negative primacy of negative information (diagnositicity), positive effect is robust and consistent in associative potential and processing speed. as early as in 1966, researcher found that positive word pairs were better learned, and in 2011, researcher found that IAT effect was driven by positivity effect. Interestingly, in our task, we basically have two processes: associative learning, and classification (matching judgment), which means that our results should be not a surprise if we considering these factors.
 
-[No real perceptual studies on moral character] 
-Given the importance of moral character, people often assume that moral character related information are prioritized in human information processing system, especially 'bad' agents [e.g., the introduction part of @siegel_beliefs_2018]. A scrutiny of the literature, however, revealed few direct evidence. For example, while @schupp_facilitated_2004 and @ohman_face_2001 were cited to support this view, they used facial expressions as stimuli that did not contain any moral meaning. @skowronski_negativity_1989, @fiske_attention_1980, and @baumeister_bad_2001 were also cited as evidence, but they were not referring to moral character in specific but using negative social traits, which include many other traits. For instance, @pratto_automatic_1991 focused on the desirability of personal traits, which is not specific to moral character either. While @vanneste_attention_2007 studied the attentional grabbing effect of facial expressions when agents decided not to cooperate, the mechanism of the effect, however, could not be attributed to uncooperativeness *per se*, because participants who performed the dot-detection task have no idea about the moral character and can have very different interpretations of those facial expressions. In short, though researchers in the field assumed that moral character, especially the bad one, is prioritized in information processing , direct evidence is scarce. This issue is not limited to moral character but common in person perception studies. As @freeman_dynamic_2011 put it, most studies in person perception didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception) and, if yes, (2) what are the underlying mechanisms of the prioritization effect.
+[morality is central to social life, moral character is the central of morality]
+People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge moral character of people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that it is a basic dimension for social evaluation [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020] and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. The importance of moral character may have been internalized to individuals' self-concept and the positive moral self is the most important aspect of identity [e.g., @strohminger_true_2017], and moral character is a standard we used to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. 
+
+[No real perceptual studies on moral character]
+Given the importance of moral character, people often assume that moral character related information are prioritized in human information processing system, especially 'bad' agents [e.g., @baumeister_bad_2001; @pratto_automatic_1991]. The negativity effect in impression formation [@anderson_averaging_1965; @fiske_attention_1980; @skowronski_social_1987], however, does not mean that the same effect exists in perceptual process [see a recent review, @unkelbach_chapter_2020]. Evidence suggests that bad is not necessarily stronger than good in all aspect of information processing. In some situations, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive words are classified faster than negative words. Similarly, in the lexical decision task, participants judge positive words faster than negative words. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense words, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. However, there are few data concerning how moral character information are processed at perceptual level, because, as @freeman_dynamic_2011 put it, most studies in person perception didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception) and, if yes, (2) what are the underlying mechanisms of the prioritization effect.
 
 [Challenge: operationalization of moral character in laboratory settings] 
 The scarcity of studies on low-level information process of moral character is not without reasons. When trying to study moral character's effect on information process (e.g., perception), one big challenge lies in the difficulty to operationalize the moral character. Morality is defined by context. Whether a behavior should be judged as moral or immoral depends on a number of factors such as intention, consequences [@cushman_role_2006; @young_neural_2007]. Also, whether a behavior is moral relevant depends on cultural and social norm [@haidt_new_2007; @rai_moral_2011]. These contextual factors, when studied in laboratory settings, have to be carefully controlled and manipulated by providing complex verbal information. These complex verbal information, however, does not suit most classic cognitive paradigms where stimuli are presented shortly and participants are required to make quick decisions. 
@@ -2621,7 +2624,14 @@ Correlation analysis showed that most psychological distance ratings were positi
 See Figure \@ref(fig:plot-person-dist) and Figure \@ref(fig:plot-person-dist-net).
 
 # Discussion
-In a series of experiments, we found that (1) good character are prioritized in perceptual matching task; (2) this effect was robust when moral characters are self-referential but not stranger-referential; (3) when the self-good character combined, whether task-relevant or not, participants responded faster and more accurately than when other-good character were combined. The other-good character combination might slow down the responses. The self-reported mental distance scale also showed that people rated self has longer distance to bad character.
+We human inevitably view others and ourselves in a moral lens. Previous studies assume that the principle "bad is stronger than good" also applies to moral character in information processing and assumed that bad moral character are prioritized. Across ten experiments, we studied the processing of moral character using a social associative learning task, we examined the effect of moral character on a matching task and the mechanism underlying the effect. We find evidence that good character are prioritized in the matching task, regardless of the label used for moral characters or the way stimuli are presented. We documented that this positivity effect was driven by a self-referential processing: prioritization only occur when moral characters are self-referential but not stranger-referential. The prioritization effect only occur when self-referential and good character are combined, whether task-relevant or not. When good character were combined with other, the information process was slowed down. 
+
+Our studies contribute to the person perception literature in XXX ways. First, 
+
+
+Second,
+
+Third,
 
 [direct evidence for moral character in perception]
 
