--- a/endnote.bib
+++ b/endnote.bib
@@ -1725,3 +1725,103 @@ Publisher: American Psychological Association},
 Publisher: American Psychological Association},
 	keywords = {Attentional Bias, Emotions, Rewards}
 }
+
+@article{skowronski_social_1987,
+	title = {Social judgment and social memory: The role of cue diagnosticity in negativity, positivity, and extremity biases},
+	volume = {52},
+	issn = {1939-1315(Electronic),0022-3514(Print)},
+	doi = {10.1037/0022-3514.52.4.689},
+	shorttitle = {Social judgment and social memory},
+	abstract = {In this article, we report two experiments that examine a cue-diagnosticity explanation (Skowronski \& Carlston, 1986) for the extremity and negativity biases that are commonly found in impression-formation research. The first experiment demonstrates that negative behaviors are generally perceived as more diagnostic than positive behaviors when the former are morality related (honesty-dishonesty) but that these perceptions are reversed when negative behaviors are ability related (intelligence-stupidity). Furthermore, as predicted, extreme behaviors relating to either morality or ability were perceived as more diagnostic than were moderate behaviors. As a consequence of these perceptions, it was predicted that the impression-formation task used in Experiment 2 would detect negativity and extremity biases for the morality judgment, but positivity and extremity biases for the ability judgment. The data confirmed these predictions, providing support for the cue-diagnosticity approach and posing problems for alternative approaches to judgment biases. Experiment 2 also found recall to be characterized by negativity biases for stimulus behaviors relating to both morality and ability. ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	pages = {689--699},
+	number = {4},
+	journaltitle = {Journal of Personality and Social Psychology},
+	author = {Skowronski, John J. and Carlston, Donal E.},
+	date = {1987},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Prejudice, Impression Formation, Social Perception, Cues}
+}
+
+
+@incollection{unkelbach_chapter_2020,
+	title = {Chapter Three - Negativity bias, positivity bias, and valence asymmetries: Explaining the differential processing of positive and negative information},
+	volume = {62},
+	url = {https://www.sciencedirect.com/science/article/pii/S0065260120300150},
+	shorttitle = {Chapter Three - Negativity bias, positivity bias, and valence asymmetries},
+	abstract = {Distinguishing between “good” and “bad” is a fundamental task for all organisms. However, people seem to process positive and negative information differentially, described in the literature as instances of negativity bias, positivity bias, or valence asymmetries. We provide an overview of these processing differences and their explanations. First, we review negativity advantages: People attend more to negative information, recall it more, and weigh it more heavily, relative to positive information. Second, we review positivity advantages: People process positive information faster, have broader associations from it, and show stronger congruency effects, relative to negative information. We then discuss existing explanations for these differential effects in terms of phylogenetic pressures, correlates of valence, diagnosticity, mobilization-minimization, and top-down vs. bottom-up processing. Finally, we suggest the differential similarity of positive and negative information as a unifying explanation. We delineate why positive information should be more alike relative to negative information, and how differential similarity translates to the observed processing differences. Then we show how the similarity explanation leads to novel predictions and how it solves old puzzles. Similarity thereby provides an explanatory construct for both positivity and negativity advantages, allowing precise quantitative predictions for valence asymmetries beyond the mere classification of “good” and “bad.”},
+	pages = {115--187},
+	booktitle = {Advances in Experimental Social Psychology},
+	publisher = {Academic Press},
+	author = {Unkelbach, Christian and Alves, Hans and Koch, Alex},
+	editor = {Gawronski, Bertram},
+	urldate = {2021-04-05},
+	date = {2020-01-01},
+	langid = {english},
+	doi = {10.1016/bs.aesp.2020.04.005},
+	keywords = {Social cognition, Negativity bias, Information ecology, Positivity bias, Valence asymmetries}
+}
+
+@article{anisfeld_when_1966,
+	title = {When are pleasant words learned faster than unpleasant words?},
+	volume = {5},
+	issn = {0022-5371},
+	url = {https://www.sciencedirect.com/science/article/pii/S0022537166800063},
+	doi = {10.1016/S0022-5371(66)80006-3},
+	abstract = {The role of the pleasantness-unpleasantness of words was examined in experiments by means of free-recall, serial-learning, and a variety of paired-associate tasks. Pleasant words were learned faster than unpleasant words only in nonsense syllable-word paired-associate tasks. In an attempt to explain these differential findings, a distinction was drawn between tasks that were assumed to involve an assignment of connotative meaning to meaningless items (nonsense syllable-word pairs) and those tasks in which this process was considered to be only minimally present (word-nonsense syllable and word-word pairs, free recall, and serial learning). It was hypothesized that affective tone is a variable in the acquisition of new meaning, but not in other aspects of verbal learning.},
+	pages = {132--141},
+	number = {2},
+	journaltitle = {Journal of Verbal Learning and Verbal Behavior},
+	shortjournal = {Journal of Verbal Learning and Verbal Behavior},
+	author = {Anisfeld, Moshe and Lambert, Wallace E.},
+	urldate = {2021-04-06},
+	date = {1966-04-01},
+	langid = {english},
+	file = {ScienceDirect Snapshot:/home/hcp4715/Zotero/storage/CP8MA8E2/S0022537166800063.html:text/html;Anisfeld and Lambert - 1966 - When are pleasant words learned faster than unplea.pdf:/home/hcp4715/Zotero/storage/B85XDAT4/Anisfeld and Lambert - 1966 - When are pleasant words learned faster than unplea.pdf:application/pdf}
+}
+
+@article{anselmi_positive_2011,
+	title = {Positive Associations Primacy in the {IAT}},
+	issn = {1618-3169},
+	url = {https://econtent.hogrefe.com/doi/abs/10.1027/1618-3169/a000106},
+	abstract = {Two studies investigated the different contribution of positive and negative associations to the size of the Implicit Association Test ({IAT}) effect. A Many-Facet Rasch Measurement analysis was appl...},
+	journaltitle = {Experimental Psychology},
+	author = {Anselmi, Pasquale and Vianello, Michelangelo and Robusto, Egidio},
+	urldate = {2021-04-06},
+	date = {2011-01-01},
+	langid = {english},
+	note = {Publisher: Hogrefe Publishing}
+}
+
+@article{anderson_averaging_1965,
+	title = {Averaging versus adding as a stimulus-combination rule in impression formation},
+	volume = {70},
+	issn = {0022-1015(Print)},
+	doi = {10.1037/h0022280},
+	abstract = {Ss rated their liking of persons described by sets of 2 or 4 personality-trait adjectives. Adjectives were chosen from 4 scale ranges: extremely or moderately favorable or unfavorable. Results were as follows. (a) A set of 2 moderate and 2 extreme adjectives produced a less extreme response than the set of 2 extreme adjectives alone. This result is inconsistent with the idea that S reaches his impression by adding the stimulus values; it is qualitatively consistent with the idea that he averages the stimulus values. (b) With all adjectives of equal value, an increase in the number of adjectives per set produced a more extreme response. It was shown how this set-size effect, which seems to be inconsistent with an averaging model, can be handled by such a formulation. (c) The additive and averaging models made the same predictions for 2 quantitative comparisons of which 1 showed significant discrepancy. There is thus some question whether either formulation can handle the data at a quantitative level. ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	pages = {394--400},
+	number = {4},
+	journaltitle = {Journal of Experimental Psychology},
+	author = {Anderson, Norman H.},
+	date = {1965},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Adjectives, Affection, Impression Formation, Personality Traits}
+}
+
+@article{fiske_attention_1980,
+	title = {Attention and weight in person perception: The impact of negative and extreme behavior},
+	volume = {38},
+	issn = {1939-1315(Electronic),0022-3514(Print)},
+	doi = {10.1037/0022-3514.38.6.889},
+	shorttitle = {Attention and weight in person perception},
+	abstract = {Analyzed the social perception process to determine whether selectivity of available stimuli is based on the informativeness of person attributes, the properties of which are the evaluative extremity (distance from the scale midpoint) and the evaluative valence (positive or negative). In a preliminary scaling study and a main weighting study, 126 undergraduates independently rated the likability of the 16 stimuli persons portrayed on slides. Negativity and extremity were manipulated on the slides across 2 behavioral dimensions: sociability and civic activism. Ss saw 2 prescaled behavior photographs for each stimulus person and controlled a slide changer switch, providing a measure of attention as looking time. Likability ratings provided a measure of relative weight derived from N. H. Anderson's (1968) information integration model. Results show that Ss preferentially weighted behaviors that were extreme or negative, and the behavioral measure of attention (looking time) replicated the predicted pattern. (58 ref) ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	pages = {889--906},
+	number = {6},
+	journaltitle = {Journal of Personality and Social Psychology},
+	author = {Fiske, Susan T.},
+	date = {1980},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Attention, Interpersonal Interaction, Rating, Social Perception}
+}
