before clean intro

--- a/endnote.bib
+++ b/endnote.bib
@@ -1825,3 +1825,55 @@ Publisher: American Psychological Association},
 Publisher: American Psychological Association},
 	keywords = {Attention, Interpersonal Interaction, Rating, Social Perception}
 }
+
+@incollection{freeman_chapter_2020,
+	title = {Chapter Five - Dynamic interactive theory as a domain-general account of social perception},
+	volume = {61},
+	url = {https://www.sciencedirect.com/science/article/pii/S0065260119300346},
+	abstract = {The perception of social categories, emotions, and personality traits from others' faces each have been studied extensively, but in relative isolation. We synthesize emerging findings suggesting that, in each of these domains of social perception, both a variety of bottom-up facial features and top-down social cognitive processes play a part in driving initial perceptions. Among such top-down processes, social-conceptual knowledge in particular can have a fundamental structuring role in how we perceive others' faces. Extending the Dynamic Interactive framework (Freeman \& Ambady, 2011), we outline a perspective whereby the perception of social categories, emotions, and traits from faces can all be conceived as emerging from an integrated system relying on domain-general cognitive properties. Such an account of social perception would envision perceptions to be a rapid, but gradual, process of negotiation between the variety of visual cues inherent to a person and the social cognitive knowledge an individual perceiver brings to the perceptual process. We describe growing evidence in support of this perspective as well as its theoretical implications for social psychology.},
+	pages = {237--287},
+	booktitle = {Advances in Experimental Social Psychology},
+	publisher = {Academic Press},
+	author = {Freeman, Jonathan B. and Stolier, Ryan M. and Brooks, Jeffrey A.},
+	editor = {Gawronski, Bertram},
+	urldate = {2021-04-05},
+	date = {2020-01-01},
+	langid = {english},
+	doi = {10.1016/bs.aesp.2019.09.005},
+	keywords = {Social cognition, Emotion, Person perception, Impression formation, Face perception, Social vision}
+}
+
+
+@article{bargh_generality_1992,
+	title = {The generality of the automatic attitude activation effect},
+	volume = {62},
+	issn = {1939-1315(Electronic),0022-3514(Print)},
+	doi = {10.1037/0022-3514.62.6.893},
+	abstract = {R. H. Fazio et al (1986) demonstrated that Ss were able to evaluate adjectives more quickly when these adjectives were immediately preceded (primed) by attitude objects of similar valence, compared with when these adjectives were primed by attitude objects of opposite valence. Moreover, this effect obtained primarily for attitude objects toward which Ss were presumed to hold highly accessible attitudes, as indexed by evaluation latency. The present research explored the generality of these findings across attitude objects and across procedural variations. The results of 3 experiments indicated that the automatic activation effect is a pervasive and relatively unconditional phenomenon. It appears that most evaluations stored in memory, for social and nonsocial objects alike, become active automatically on the mere presence or mention of the object in the environment. ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	pages = {893--912},
+	number = {6},
+	journaltitle = {Journal of Personality and Social Psychology},
+	author = {Bargh, John A. and Chaiken, Shelly and Govender, Rajen and Pratto, Felicia},
+	date = {1992},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Cognitive Generalization, Adjectives, Adult Attitudes}
+}
+
+
+@article{unkelbach_good_2010,
+	title = {Good Things Come Easy: Subjective Exposure Frequency and the Faster Processing of Positive Information},
+	volume = {28},
+	issn = {0278-016X},
+	url = {https://guilfordjournals.com/doi/10.1521/soco.2010.28.4.538},
+	doi = {10.1521/soco.2010.28.4.538},
+	shorttitle = {Good Things Come Easy},
+	abstract = {Processing of evaluative information is a central theme in social cognition research. Most studies focus on processing advantages associated with negative information. Here, we demonstrate and explain the faster processing of positive information. Building on the “density” hypothesis (Unkelbach et al., 2008), we predicted that this advantage is explained by higher subjective exposure to positive information, and not valence per se. We argue that subjective exposure is a phenomenological proxy for informational density in memory. Three studies confirmed this prediction. Study 1 found that people were faster to identify positive than negative words. Using path analysis, Study 2 demonstrated that subjective exposure accounted for this valence effect. Study 3 replicated these findings when objective frequency was controlled across positive and negative valence. The implications for theories of how evaluative information is detected, processed, and retrieved are discussed.},
+	pages = {538--555},
+	number = {4},
+	journaltitle = {Social Cognition},
+	author = {Unkelbach, Christian and von Hippel, William and Forgas, Joseph P. and Robinson, Michael D. and Shakarchi, Richard J. and Hawkins, Chris},
+	urldate = {2021-04-10},
+	date = {2010-08-01},
+	note = {Publisher: Guilford Publications Inc.}
+}
