--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Researchers in moral psychology had long assumed that information related to bad moral character is prioritized in cognitive processing, yet the evidence is scarce. A main challenage lies operationalizing moral character to suit cognitive tasks. Social associative learning task, where participants first learn the associations between social conceptions and neutral stimuli and then perform cognitive tasks (e.g., matching judgment), had been proved to be an effective way to study the information processing of social and affective factors. Here, we examined the information process of moral character using social associataive learning task. Across 9 experiments (N = 4XX, trials = XXX), we found a robust but opposite effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, even when identity or moral character information became task-irrelevant, good character still interact with self-referential processing: the good-self combination facilitate the process while the good-other combination slowed down the process. Together, these results suggested a positiviity bias in social associative learning task where good character are prioritized.
+ Researchers in moral psychology had long assumed that information related to bad moral character is prioritized in cognitive processing, yet the evidence is scarce. A main challenage lies in operationalizing moral character to suit cognitive tasks. Social associative learning task, where participants first associat social conceptions with neutral stimuli and then perform cognitive tasks (e.g., matching judgment), had been proved to be an effective way to study the information processing of social and affective information Here, we examined the information process of moral character using social associataive learning task. Across 9 experiments (N = 4XX, trials = XXX), we found a robust but opposite effect: shapes associated with good character were prioritized, as compared to shapes associated with neutral or bad characters. Crucially, good character effect was robust when it referred to the self but weak or non-exist when it referred to a stranger. Moreover, even when identity or moral character information became task-irrelevant, participants were still sensitive to good character: the good-self combination facilitate the process while the good-other combination slowed down the process. Together, these results suggested that good character is prioritized in social associative learning task where and this effect was due to a spontaneous self-referential processing.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -92,29 +92,47 @@ moral associative learning as an stronger predictor??
 social vision --> moral vision --> two competing explanations (value-based vs. true-self-based) --> true-self is not perspective free but self-centered.
 
 [Huang & Sherman 2018, attention theory: attend to differentiating information to maximize category learning]
-[Unkelbach et al., 2020, Similarity theory of positivity and negativiity bias, a very comprehensive review of positivity effect and negativity effect in social cognition. Especially interesting is that, with extensive studies on the negative primacy of negative information (diagnositicity), positive effect is robust and consistent in associative potential and processing speed. as early as in 1966, researcher found that positive word pairs were better learned, and in 2011, researcher found that IAT effect was driven by positivity effect. Interestingly, in our task, we basically have two processes: associative learning, and classification (matching judgment), which means that our results should be not a surprise if we considering these factors.
+[Unkelbach et al., 2020, Similarity theory of positivity and negativity bias, a very comprehensive review of positivity effect and negativity effect in social cognition. Especially interesting is that, with extensive studies on the negative primacy of negative information (diagnositicity), positive effect is robust and consistent in associative potential and processing speed. as early as in 1966, researcher found that positive word pairs were better learned, and in 2011, researcher found that IAT effect was driven by positivity effect. Interestingly, in our task, we basically have two processes: associative learning, and classification (matching judgment), which means that our results should be not a surprise if we considering these factors.
 
-[morality is central to social life, moral character is the central of morality]
-People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge moral character of people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that it is a basic dimension for social evaluation [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020] and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. The importance of moral character may have been internalized to individuals' self-concept and the positive moral self is the most important aspect of identity [e.g., @strohminger_true_2017], and moral character is a standard we used to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. 
+[Morality is central to social life, moral character is the central of morality] **People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014] and judging the moral character of people is indispensable part of these events**. Whether we are the agent, target, or a third party of a moral event, we always judge moral behaviors as "right" or "wrong", and by doing so, we judge people as "good" or "bad" [@uhlmann_person-centered_2015]. Moral character is so important in social life that it is a basic dimension in our social evaluation [@goodwin_moral_2014; @goodwin_moral_2015] and that a substantial part of people's conversation are gossiping others' moral character (or, reputation) [e.g., @dunbar_gossip_2004]. These moral character information may help us to evaluate our in-group members and distinguish out-group members [@ellemers_morality_2018]. The importance of moral character may have been internalized to individuals' self-concept and the good moral self is deemed as the core of identity [e.g., @strohminger_true_2017]. 
 
-[No real perceptual studies on moral character]
-Given the importance of moral character, people often assume that moral character related information are prioritized in human information processing system, especially 'bad' agents [e.g., @baumeister_bad_2001; @pratto_automatic_1991]. The negativity effect in impression formation [@anderson_averaging_1965; @fiske_attention_1980; @skowronski_social_1987], however, does not mean that the same effect exists in perceptual process [see a recent review, @unkelbach_chapter_2020]. Evidence suggests that bad is not necessarily stronger than good in all aspect of information processing. In some situations, good is stronger than bad. For example, when participants are asked to classify words as good or bad, positive words are classified faster than negative words. Similarly, in the lexical decision task, participants judge positive words faster than negative words. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense words, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. However, there are few data concerning how moral character information are processed at perceptual level, because, as @freeman_dynamic_2011 put it, most studies in person perception didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after. Therefore, it remains unclear (1) whether moral character related information are prioritized in information processing (e.g., perception) and, if yes, (2) what are the underlying mechanisms of the prioritization effect.
+[Two possibilities about moral character]
+Given the importance of moral character and limited cognitive resources to process all the information in a social world, will people deferentially process the information related to moral character and prioritize moral character information? One possibility is that 'bad' character related information are prioritized [e.g., @baumeister_bad_2001; @pratto_automatic_1991]. This possibility is consistent with early studies in impression formation which found that negative traits are weighted more in overall impression [@anderson_averaging_1965; @fiske_attention_1980; @skowronski_social_1987]. This idea also seemed to consistent with the more general idea that "bad is stronger than good" [@baumeister_bad_2001]. A few studies provided evidence that negative moral character are prioritized in pre-attentive process. For example, @anderson_visual_2011 associated faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then asked participants to perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their vision by pressing buttons. The results revealed that faces associated negative social behaviors appeared in the visual awareness longer than faces associated with other types of behaviors [but see @stein_no_2017]. @eiserbeck_visual_2020 combined indirect associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially. 
+
+It is also possible, however, that the negativity effect in impression formation may not be able to generalized to perceptual process, instead, positive moral characters are prioritized [see recent reviews, @pool_attentional_2016; @unkelbach_chapter_2020]. @unkelbach_chapter_2020 pointed out that bad is not necessarily stronger than good in all aspects of information processing. Good is stronger than bad in some paradigms. For example, when participants are asked to classify words as good or bad, positive trait words are classified faster than negative words [@bargh_generality_1992]. Similarly, in a lexical decision task, participants judge positive words faster than negative words [@unkelbach_good_2010]. Also, @anisfeld_when_1966 found that positive words are easier to associate with nonsense word-like strings, and this advantage in associative potential also appeared in implicit association test (IAT) [@anselmi_positive_2011]. These early study was echoed by a recent study where faces with positive interaction in a trust game were prioritized in pre-attentive process [@shore_social_2013].
+
+Here, we attempted to distinguish the two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positive bias, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negative bias, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
+
+The positivity effect consistent with previous studies where positivity effect of social trait words were found [@anselmi_positive_2011; @bargh_generality_1992; @unkelbach_good_2010]. However, the current positivity results cannot be explained by the similarity hypothesis [@unkelbach_chapter_2020] because we only used three stimuli. There are two possibility explanations. The first one is the value-based attention account, which suggests that stimuli that are valuable to us are prioritized [@anderson_neurobiology_2019]. In our experiments, the good character label "good person" may represent an indirect but valuable stimuli because, in social life, a good other is usually more valuable than an bad other [@abele_agency_2007]. Another possibility is derived from social categorization theory, which suggested that we automatically categorize others as in-group or out-group []. Moral character is an important criterion for social categorization []. However, the above four experiments could not distinguish between these possibilities, because the "good-person" label was not explicit about the identity. Therefore, the label "good person" could both be rewarding and be categorized as in-group member. Previous studies using associative learning paradigm revealed that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized.  
+
+We designed further experiments to test whether the positivity effect was due to potential value or social categorization. We introduced identity (self vs. other) as an addition independent variable in exp 3a, 3b, and 6b. Now the moral valence is orthogonal to the identity. TIn this case the identity become salient and participants are less likely to spontaneously identify a good-other as the extension of self, but the value of good-person still exists. If the positiivty effect was driven by social categorization theory, then participants prioritize good-self but not good-other. If the value-based attention theory is true, then, both good-self and good-other are prioritized, or maybe good-other are even more prioritized. Results from three experiments revealed that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other; (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A three-level Bayesian generalized linear mixed effect model showed that there was no effect of valence when the identity was other. This results showed that value-based attention was not likely the mechanism behind the pattern we observed in first four experiments. 
+
+Although the introduction of self- and other-referential processing provided evident that value-based account can not explain the good-character effect, it introduced the good-self effect, which can be explained by social-categorization explanation and an even more self-centered explanation: moral self account. Moral self view suggested that moral self if the true self [ ]. 
+
+We went further to disentangle the good-self complex: is it because the special role of good-self or because of social categorization. We designed two complementary experiments. in experiment 4a, participants only learned the association between self and other, the words "good-person", "neutral person", and "bad person" were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between "good-person", "neutral-person", and "bad-person", and the "self" and "other" were presented as task-irrelevant stimuli. These two experiment can be used to distinguish the "good-self" as anchor account and the "good-self-based social categorization" account. If good-self as an anchor is true, then, in both experiment, good-self will show advantage over all other stimuli, and there will be no other effects. More specifically, in experiment 4a, where only the self-relevance is task-relevant, there will be advantage for good as task-irrelevant condition than the other two self conditions, while there is no other effects; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition, and no other effects. If good-self-based social categorization if true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good effect in self conditions, this prediction is the same as the "good-self as anchor" account, but also, it predicts a reverse good effect in other condition because good and other a conflict in terms of social-categorization, this prediction is different from the "good-self" anchor account; however, for experiment 4b, it predicts no identity effect in the good-person condition because both self and other are in the good group.
+
+
+Another key focus of this work concerns whether perceiving moral character is in fact self-serving [@ellemers_psychology_2019; @monin_dynamic_2009]. Although a rich, long-standing literature in social psychology and organizational psychology found that people are maintaining a positive self-view, especially in moral domain [@tappin_illusion_2017]. However, it is unclear how the self-serving motivation will impact the perception of moral character information. One possibility is that we may perceive others as profitable or not to us [Abele 2007], which may lead to th value-based attention bias explanation []. Another possibility is that moral character were used to distinguish between self and other, i.e., social categorization. Self-as-anchor view vs. value-based view. the former emphasize the importance of self and concerns the identity of the moral character, the later emphasize the value of positive character and threatening of negative character. 
+
+It remains unknown, then, how moral character information are processed at perceptual level, because most studies "didn't try to explain the perceptual process itself, rather, they are trying to explain the higher-order social cognitive processes that come after" [@freeman_dynamic_2011]. Therefore, it is unclear (1) what is the direction of the asymmetrical effect when processing moral character related information, i.e., positivity effect or negativity effect, (2) what are the underlying mechanisms of the effect. [possible reasons for positive bias: potential profits, social categorization, self-referential]
+
+We addressed this issue by social associative learning task, where participants first associate visual stimuli (e.g., faces) with descriptions of a person's behaviors, then perform a task that examine the differences between visual stimuli that associated with different behaviors. If ....
 
 [Challenge: operationalization of moral character in laboratory settings] 
-The scarcity of studies on low-level information process of moral character is not without reasons. When trying to study moral character's effect on information process (e.g., perception), one big challenge lies in the difficulty to operationalize the moral character. Morality is defined by context. Whether a behavior should be judged as moral or immoral depends on a number of factors such as intention, consequences [@cushman_role_2006; @young_neural_2007]. Also, whether a behavior is moral relevant depends on cultural and social norm [@haidt_new_2007; @rai_moral_2011]. These contextual factors, when studied in laboratory settings, have to be carefully controlled and manipulated by providing complex verbal information. These complex verbal information, however, does not suit most classic cognitive paradigms where stimuli are presented shortly and participants are required to make quick decisions. 
+The scarcity of studies on perceptual process of moral character is not without reasons. When trying to study moral character's effect on information process (e.g., perception), one big challenge lies in the difficulty to operationalize the moral character. Morality is defined by context. Whether a behavior should be judged as moral or immoral depends on a number of factors such as intention of the agent, consequences of the behavior [@cushman_role_2006; @young_neural_2007]. Also, whether a behavior is moral relevant depends on cultural and social norm [@haidt_new_2007; @rai_moral_2011]. These contextual factors, when studied in laboratory settings, have to be carefully controlled and manipulated by providing verbal scenarios. These verbal information, however, do not suit most classic cognitive paradigms where stimuli are presented shortly and participants are required to make quick decisions. 
 
-To solve this issue, two approaches emerged in the last decade. The first approach used direct associative learning. For example, @shore_social_2013 asked participants first interact with a stranger, who was represented by a face on the screen. Participants formed impression of that person through interaction and judge him/her as trustworthy or not. After getting such impression, participants then finished a attention blink task where the faces were used as stimuli. Their findings revealed that faces associated with cooperative interaction history are preferentially processed in the pre-attention stage.
+To address this issue, two approaches emerged in the last decade. In the first approach, participants directly learn the moral character of another agent through observing her/his behavior or through interacting with her/him. For example, @shore_social_2013 asked participants to play a trust game with a stranger, who was represented by a face on the screen. Participants formed impression of that person through interaction and judge him/her as trustworthy or not. After getting such impression, participants then finished a attention blink task where the face of the stranger were used as stimuli. Their findings revealed that faces associated with cooperative interaction history are preferentially processed in the pre-attention stage.
 
-Another approach used indirect associative learning, where participants first associate visual stimuli (e.g., faces) with descriptions of a person's behaviors, then perform a task that examine the differences between visual stimuli that associated with different behaviors. For example, @anderson_visual_2011 associated faces with different behaviors (both negative and neutral behaviors from both social and nonsocial domains) and then asked participants to perform a binocular rivalry task, where a face and a building were presented to each eye and participant were required report the content of their vision by pressing buttons. They found that faces associated negative social behaviors were dominant for longer time in the visual awareness than faces associated with other types of behaviors [but see @stein_no_2017]. @eiserbeck_visual_2020 combined indirect associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors and asked participants to perform a attention blink task. They also found that neutral faces associated with negative behavior were processed preferentially. The indirect associative learning paradigm had been developed primarily for affective meanings, and these studies found that building such association requires minimal behavioral information [@bliss-moreau_individual_2008; @falvello_robustness_2015; @todorov_robust_2008]. A similar approach has been used to explore the prioritization of self-related information [@Sui_2012_JEPHPP], where more abstract concepts (person labels, e.g., "self", "friend", "stranger") and simpler visual cues (geometric shapes, e.g., triangle, circle, or square) were used. This simpler shape-label associative learning task produced robust self-prioritization effect.
+Another approach used indirect associative learning, where participants first associate visual stimuli (e.g., faces) with descriptions of a person's behaviors, then perform a task that examine the differences between visual stimuli that associated with different behaviors. For example, @anderson_visual_2011 associated faces with different behaviors (e.g., negative and neutral behaviors from both social and nonsocial domains) and then asked participants to perform a binocular rivalry task, where a face and a building were presented to each eye. Participants were required report the content of their vision by pressing buttons. The results revealed that faces associated negative social behaviors appeared in the visual awareness longer than faces associated with other types of behaviors [but see @stein_no_2017]. @eiserbeck_visual_2020 combined indirect associative learning with attention blink paradigm, where neutral faces were associated with sentences about neutral or negative trust behaviors. They also found that neutral faces associated with negative behavior were processed preferentially. Other studies, where the neutral faces were associated with different affective meanings, found that forming associations requires minimal behavioral information [@bliss-moreau_individual_2008; @falvello_robustness_2015; @todorov_robust_2008]. A similar approach has been used to explore the prioritization of self-related information [@Sui_2012_JEPHPP], where more abstract concepts (person labels, e.g., "self", "friend", "stranger") and simpler visual cues (geometric shapes, e.g., triangle, circle, or square) were used. This simpler shape-label associative learning task can produce robust self-prioritization effect.
 
-Both direct and indirect associative learning paradigms are consistent with the dynamic interactive model of person perception [@freeman_dynamic_2011]. The dynamic interactive model proposed that the perceived personal traits are interactively linked with behavior and sensory stimuli. By activating some sensory stimuli, some person traits can be activated. The associative learning task reverse engineering the process and linking the personal traits (moral character in our case) with new visual stimuli, therefore created a temporary but direct link between personal traits and visual stimuli. After creating such associations between different traits and different visual cues, we can then test the newly established trait-cue associations by different cognitive tasks and examine the instantly learned associations' influence on cognitive processing.
+Both direct and indirect associative learning paradigms are consistent with the dynamic interactive model of person perception [@freeman_dynamic_2011; @freeman_chapter_2020]. The dynamic interactive model proposed that the perceived personal traits are interactively linked with behavior and sensory stimuli. By activating sensory cues, abstract person traits can be (partially) activated. The inverse process is also possible, abstract person traits can exert influence on the processing of visual cues. Based on these assumptions, associative learning tasks directly link the higher-level, abstract personal traits (moral character in our case) with low-level visual cues, creating a temporary but direct association between personal traits and visual stimuli. After creating such associations between different traits and different visual cues, we can then test the newly established trait-cue associations by different cognitive tasks and examine the instantly learned associations' influence on cognitive processing.
 
 [The current study] 
-The current study was designed to investigate the perceptual process of moral character by using the shape-label associative learning task. This paradigm has two major advantages over face-based indirect associative learning tasks. First, it only used a few number of labels that represent different moral characters, therefore control individual differences in interpreting moral meaning of behaviors. Second, it uses non-social visual stimuli as cues, avoided the idiosyncratic features brought by using faces. Besides, the simplicity of the task allows it to be easily combined with other cognitive tasks. Using this shape-label associative learning and perpetual matching task, the current study aimed at answering two questions mentioned above: (1) whether moral character related information are prioritized, if so, what is the exact pattern; (2) what is the potential explanation for such pattern.
+The current study was designed to investigate the perceptual process of moral character by using the shape-label associative learning task. This paradigm has two major advantages over face-based indirect associative learning tasks. First, it only used a few number of labels that represent different moral characters instead of moral behaviors, therefore control individual differences in interpreting moral meaning of behaviors. Second, it uses non-social visual stimuli as cues, avoided the idiosyncratic features brought by using faces. Besides, the simplicity of the task allows it to be easily combined with other cognitive tasks. Using this shape-label associative learning and perpetual matching task, the current study aimed at answering two questions mentioned above: (1) whether moral character related information are prioritized, if so, what is the exact pattern; (2) what is the potential explanations for such pattern.
 
-To investigate the first issue and validate that moral character concepts activated moral character as a social cue, we designed four experiments to explore and validate the paradigm. The first experiment directly adopted associative paradigm from @Sui_2012_JEPHPP and changed labels from "self", "friend", and "stranger" to "good-person", "neutral-person", and "bad-person". In the follow-up studies, we tested other character labels that have similar moral meaning ("kind-person", "neutral-person", and "evil-person"). In the third experiments, as in @anderson_visual_2011, we asked participants to learn associations between three different diagnostic behaviors and three different names, and then use the names as character labels for the associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present labels and shapes. All of these four experiments showed a consistent results, that is, the visual cues that associated with positive moral character were prioritized. 
+To investigate the first issue and validate that moral character concepts activated moral character as a social cue, we designed four experiments. The first experiment directly adopted associative paradigm from @Sui_2012_JEPHPP and changed labels from "self", "friend", and "stranger" to "good-person", "neutral-person", and "bad-person". In the follow-up studies, we tested other character labels that have similar moral meaning ("kind-person", "neutral-person", and "evil-person"). In the third experiments, as in @anderson_visual_2011, we asked participants to learn associations between three different diagnostic behaviors and three different names, and then use the names as character labels for the associative learning. Finally, we also tested whether the way of presenting stimuli mattered and sequentially present labels and shapes. All of these four experiments showed a consistent results, that is, the visual cues that associated with good character were prioritized. 
 
-Although the available studies agree that social/moral information can enhance the saliency of the sensory stimuli, yet the reported direction of the effect is not consistent. For instance, there are two studies reported a negativity effect where neutral faces associated with negative social behavioral were processed better than neutral faces that associated with neutral behaviors [@anderson_visual_2011; @eiserbeck_visual_2020; but see @stein_no_2017]. The underlying reasons for the prioritization was usually attributed to affective meaning of the negative behaviors, which, in essence, is a threatening effect. In contrast, there was one study reported a positivity effect, where faces associated with positive interaction history were prioritized over faces associated with neutral or negative interaction history. And the positivity effect was attributed to a value-based information process [@shore_social_2013]. 
+Although the available studies agree that social/moral information can enhance the saliency of the sensory stimuli, yet the reported direction of the effect is not consistent. For instance, there are two studies reported a negativity effect [@anderson_visual_2011; @eiserbeck_visual_2020; but see @stein_no_2017]. The underlying reasons for the prioritization was usually attributed to affective meaning of the negative behaviors, which, in essence, is a threatening effect. In contrast, there was one study reported a positivity effect, where faces associated with positive interaction history were prioritized over faces associated with neutral or negative interaction history [@shore_social_2013]. And the positivity effect was attributed to a value-based information process [@shore_social_2013]. 
 
 The direction of the effect leads to different underlying explanations. The negativity effect usually explained by the evolutionary adoptive mechanism where the threatening feature were prioritized. However, accumulating evidence supported the view that negativity effect, especially those related to affective stimuli, are prioritized because of the low-level physical features, e.g., low frequency feature in the facial expression [see a recent review, @pool_attentional_2016]. This is reflected in the pattern that threatening stimuli are prioritized in detection task, e.g., dot-probe task. In the current study, because all visual stimuli share similar physical features and we did not using detection task but matching task, therefore, it's not surprising that we didn't found a threatening effect.
 
